@@ -26,5 +26,5 @@
  * @copyright  Copyright (c) 2005-2011 Zend Technologies USA Inc. (http://www.zend.com)
  * @license    http://framework.zend.com/license/new-bsd     New BSD License
  */
-class Validate_Exception extends Exception
+class FormMaker_Validate_Exception extends Exception
 {}
