@@ -19,7 +19,7 @@
 {ezscript_require( array( 'ezjsc::jqueryio', 'select2.min.js', 'jquery.functions.js', 'jquery.validation.js' ) )}
 
 
-{include uri="design:form_steps.tpl" form_data=$form_data all_pages=$form_data.all_pages form_definition=$form_definition current_page=$current_page}
+{include uri="design:formmaker/form_steps.tpl" form_data=$form_data all_pages=$form_data.all_pages form_definition=$form_definition current_page=$current_page}
 
 {if is_set( $form_data.summary_page )}
     {set $header_text = $form_definition.summary_label}
@@ -46,16 +46,16 @@
             {* $form_data.success contains rendered template form_processed.tpl *}
             {$form_data.success}
         {else}
-            {include uri="design:form_error.tpl" errors=$errors attribute_id=0}
+            {include uri="design:formmaker/form_error.tpl" errors=$errors attribute_id=0}
 
             {foreach $form_attributes as $attribute}
                 {set $attr_required = fetch( 'formmaker', 'is_attrib_required', hash( 'attribute_id', $attribute.id ) )}
                 <div class="form-element-container" id="form_element_{$attribute.id}">
                     <div class="{if and( is_set( $counted_validators[$attribute.id] ), $counted_validators[$attribute.id] )}validate-it{/if} form_attribute_content">
-                        {include uri=concat('design:form_attributes/', $attribute.type_data.template ) attribute=$attribute is_required=$attr_required year_validator=$form_data.date_year_validator}
+                        {include uri=concat('design:formmaker/form_attributes/', $attribute.type_data.template ) attribute=$attribute is_required=$attr_required year_validator=$form_data.date_year_validator}
                     </div>
                     <div class="form_error_content">
-                        <span class="form_notification">{include uri="design:form_error.tpl" errors=$errors attribute_id=$attribute.id}</span>
+                        <span class="form_notification">{include uri="design:formmaker/form_error.tpl" errors=$errors attribute_id=$attribute.id}</span>
                     </div>
                 </div>
             {/foreach}
