@@ -24,6 +24,6 @@
 <label class="form_label_checkbox">
     <input class="{$css_class}" type="checkbox" connected="form_{$attribute.type_id}_{$attribute.id}" {if eq( $default_value, 'on' )}checked="checked"{/if}/>
     {$attribute.label} 
-    {include uri="design:form_attributes/parts/required.tpl" is_required=$is_required}
+    {include uri="design:formmaker/form_attributes/parts/required.tpl" is_required=$is_required}
 </label>
 <input id="form_{$attribute.type_id}_{$attribute.id}" type="hidden" name="field_{$attribute.type_id}_{$attribute.id}" value="{$default_value}"/>
